--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,84 @@
 GNU Astronomy Utilities NEWS                          -*- outline -*-
 
+* Noteworthy changes in release 0.2-28 (library 1.0.0) (2016-10-24) [alpha]
+
+** Bug fixes
+
+  Using `%zu' to print `size_t' variables for clean build on 32-bit
+  systems.
+
+  Crash in Table for some operating systems due to memory is now fixed (bug
+  #49347).
+
+  Table's man-page is now created and installed (bug #49418).
+
+  Fixes in the documentation (sr #109170, bug #49419).
+
+** New programs, functions, or macros
+
+  `gal_wcs_pixel_scale_deg'
+    Returns the pixel scale of the input WCS structure in degrees.
+
+  `gal_wcs_angular_distance_deg'
+    This has replaced `gal_wcs_angular_distance'. That function would take
+    the angles in radians and also return its value in radians. Radians are
+    very inconvenient and uncommon in celestial coordinates, so its input
+    and output was modified to accept angles in degrees and also return the
+    angular distance in degrees.
+
+  `gnuastro/git.h'
+    New header for wrappers on the Git library.
+
+  `gal_git_describe'
+    Bascially a wrapper on Git's describe functions to return the string
+    for easy inclusion.
+
+  `gal_fits_datatype_size
+    Return the size (in bytes) of the given datatype.
+
+  `GAL_GNUASTRO_HAVE_PTHREAD_BARRIER'
+    This is a new name for the old `GAL_GNUASTRO_PTHREAD_BARRIER' to
+    conform better with other such marcos.
+
+  `GAL_GNUASTRO_HAVE_LIBGIT2'
+    Has a value of 1 if the host system has the Git library (`libgit2').
+
+
+** Removed programs, functions, macros
+
+  `gal_wcs_angular_distance'
+    See the explanation above for `gal_wcs_angular_distance_deg'.
+
+  `GAL_GNUASTRO_PTHREAD_BARRIER'
+    See the explanation above for `GAL_GNUASTRO_HAVE_PTHREAD_BARRIER'.
+
+** New features
+
+  ImageWarp can now align the image with the celestial coordiates using the
+  `--align' option.
+
+  ImageWarp can now warp without an input matrix, using the following
+  options: `--sheer', `--flip', `--project', `--rotate', `--scale',
+  `--translate'. Any number of these transformations (along with the
+  `--align' option) can be called at runtime and they will be applied in
+  the same order to create one warping matrix. By default the FITS
+  coordinates will also be corrected.
+
+
+
+** Changes in behavior
+
+  When a 2 by 2 matrix is given to ImageWarp, the FITS pixel positions
+  (which define the center of a pixel as an integer) are automatically
+  implemented internally, see "Invoking ImageWarp" in the manual for more.
+
+  `gal_fits_write_keys_version' will now also write the Git commit
+  description when the Git library is installed on the host system.
+
+
+
+
+
 * Noteworthy changes in release 0.2 (library 0.0.0) (2016-10-03) [stable]
 
 ** Bug fixes
