--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 GNU Astronomy Utilities NEWS                          -*- outline -*-
 
-* Noteworthy changes in release 0.2-28 (library 1.0.0) (2016-10-24) [alpha]
+* Noteworthy changes in release 0.2-28 (library 1.0.0) (2016-10-23) [alpha]
 
 ** Bug fixes
 
@@ -58,13 +58,11 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   `--align' option.
 
   ImageWarp can now warp without an input matrix, using the following
-  options: `--sheer', `--flip', `--project', `--rotate', `--scale',
+  options: `--shear', `--flip', `--project', `--rotate', `--scale',
   `--translate'. Any number of these transformations (along with the
   `--align' option) can be called at runtime and they will be applied in
   the same order to create one warping matrix. By default the FITS
   coordinates will also be corrected.
-
-
 
 ** Changes in behavior
 
@@ -74,9 +72,6 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
   `gal_fits_write_keys_version' will now also write the Git commit
   description when the Git library is installed on the host system.
-
-
-
 
 
 * Noteworthy changes in release 0.2 (library 0.0.0) (2016-10-03) [stable]
