New scale option of ImageWarp used in tutorial
With the new `--scale' option of ImageWarp, it was no longer necessary to
confuse the new user with the warping matrix in the tutorial. So it was
used and the previous discussion on the FITS coordinates were removed.

Some typos that were found after the 0.2.28 release were also corrected.

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 GNU Astronomy Utilities NEWS                          -*- outline -*-
 
-* Noteworthy changes in release 0.2-28 (library 1.0.0) (2016-10-23) [alpha]
+* Noteworthy changes in release 0.2.28 (library 1.0.0) (2016-10-23) [alpha]
 
 ** Bug fixes
 
@@ -42,7 +42,6 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
   `GAL_GNUASTRO_HAVE_LIBGIT2'
     Has a value of 1 if the host system has the Git library (`libgit2').
-
 
 ** Removed programs, functions, macros
 
