--- a/THANKS
+++ b/THANKS
@@ -25,6 +25,7 @@ support in Gnuastro. The list is ordered alphabetically.
     Francesco Montanari                  francesco.montanari@openmailbox.org
     Yahya Sefidbakht                     y.sefidbakht@gmail.com
     Richard Stallman                     rms@gnu.org
+    Ole Streicher                        olebole@debian.org
 
 
 Institutions
